Add some content

--- a/src/less/template.less
+++ b/src/less/template.less
@@ -2,4 +2,9 @@
 @import "../../node_modules/font-awesome/less/font-awesome";
 
 @import "base";
+@import "slider";
+@import "search";
+@import "catalog-flex";
+@import "catalog";
+
 @import "variables";
