Add header, teaser and box less-modules

--- a/src/less/template.less
+++ b/src/less/template.less
@@ -4,6 +4,9 @@
 @import "base";
 @import "slider";
 @import "search";
+@import "box";
+@import "teaser";
+@import "header";
 @import "catalog-flex";
 @import "catalog";
 
