Update less variables

--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -4,8 +4,11 @@
 @font-size-smaller: .75rem;
 @font-size-normal: .875rem;
 @font-size-bigger: 1rem;
+@font-size-description: 1.25rem;
+@font-size-h1: 2.875rem;
+@font-size-h2: 1.875rem;
 @catalog-caption-font-size: 1.875rem;
 
 @screen-size-desktop: 1200px;
-@screen-size-tablet: 768px;
+@screen-size-tablet: 800px;
 @screen-size-mobile: 480px;
