Change catalog animation settings

--- a/src/less/catalog.less
+++ b/src/less/catalog.less
@@ -6,7 +6,7 @@
     display:       block;
 
     &__image {
-        transition:          transform ease-in .3s;
+        transition:          transform ease 1s;
         transform:           scale(1.1);
         width:               100%;
         height:              290px;
