--- a/src/less/catalog.less
+++ b/src/less/catalog.less
@@ -1,82 +1,47 @@
-.catalog-item {
-    margin-bottom: 45px;
-    position:      relative;
-    width:         100%;
-    overflow:      hidden;
-    display:       block;
-
-    &__image {
-        transition:          transform ease 1s;
-        transform:           scale(1.1);
-        width:               100%;
-        height:              290px;
-        background-size:     cover;
-        background-position: center center;
+.catalog {
+    display:         flex;
+    justify-content: flex-start;
+    flex-direction:  row;
+    flex-wrap:       wrap;
+    margin-left:     -45px;
+    padding-bottom:  3px;
+    &__child {
+        box-sizing:   border-box;
+        width:        33.3333%;
+        padding-left: 45px;
     }
-
-    &__caption {
-        transition:       opacity ease-in .3s;
-        opacity:          0;
-        position:         absolute;
-        top:              0;
-        left:             0;
-        height:           100%;
-        width:            100%;
-        padding:          0 15px;
-        background-color: fade(black, 43%);
-        display:          flex;
-        font-weight:      bold;
-        font-size:        @catalog-caption-font-size;
-        text-align:       center;
-        cursor:           pointer;
-        box-sizing:       border-box;
-
-        &-text {
-            margin: auto;
-            color:  white;
-
-        }
-    }
-
-    &:hover {
-        .catalog-item__image {
-            transform: scale(1);
-        }
-        .catalog-item__caption {
-            opacity: 1;
-        }
-    }
-
-    &_favourite {
-
-        &:before,
-        &:after {
-            content:  '';
-            position: absolute;
-            top:      -7px;
-            right:    -7px;
-            width:    20px;
-            height:   20px;
-
-        }
-
-    }
-
 }
 
-@media (max-width: @screen-size-tablet) {
-    .catalog-item {
-        margin-bottom: 20px;
-    }
 
+@media (max-width: @screen-size-tablet) {
+    .catalog {
+        margin-left: -18px;
+        &__child {
+            padding-left: 18px;
+            width:        50%;
+        }
+
+    }
+}
+
+@media (min-width: @screen-size-mobile + 1) and (max-width: @screen-size-tablet) {
+
+    .catalog__child {
+        &_order-tablet {
+            &_first {
+                order: -1;
+            }
+        }
+    }
 }
 
 @media (max-width: @screen-size-mobile) {
-    .catalog-item {
-        margin-bottom: 0;
-        &__image {
-            height: 250px;
+    .catalog {
+        margin-left:  -15px;
+        margin-right: -15px;
+        .catalog__child {
+            padding-left: 0;
+            width:        100%;
         }
     }
 }
-
