Improve header part

--- a/src/less/base.less
+++ b/src/less/base.less
@@ -1,8 +1,8 @@
-body {
+.page {
     margin:      0;
     color:       @global-color;
     font:        @font-size-bigger 'Open Sans', sans-serif;
-    line-height: 1.5;
+    line-height: 1.25;
     font-weight: normal;
 }
 
