--- a/src/less/template.less
+++ b/src/less/template.less
@@ -2,12 +2,14 @@
 @import "../../node_modules/font-awesome/less/font-awesome";
 
 @import "base";
-@import "slider";
-@import "search";
+@import "button";
 @import "box";
+@import "search";
 @import "teaser";
 @import "header";
-@import "catalog-flex";
+@import "slider";
+@import "toolbar";
 @import "catalog";
+@import "catalog-item";
 
 @import "variables";
