--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -10,5 +10,10 @@
 @catalog-caption-font-size: 1.875rem;
 
 @screen-size-desktop: 1200px;
-@screen-size-tablet: 800px;
+@screen-size-tablet: 960px;
 @screen-size-mobile: 480px;
+
+@header-space-inner: 10px;
+
+@header-width-left-side: 62.5%;
+@header-width-right-side: 100 - @header-width-left-side;
