--- a/src/less/header.less
+++ b/src/less/header.less
@@ -1,24 +1,56 @@
 .header {
-    min-height:    600px;
-    display:       flex;
+    height:        600px;
     margin-bottom: 25px;
+    position:      relative;
+    display:       flex;
 
-
-    &_level_main, &_level_secondary {
-        position: relative;
-        display:  flex;
-
+    &__item {
+        display: flex;
     }
 
-    &_level_main {
-        width: 63%;
+    &_side_left, &_side_right {
+        display:    flex;
+        box-sizing: border-box;
     }
 
-    &_level_secondary {
+}
+
+@media (min-width: @screen-size-tablet + 1) {
+
+    /**
+    Левая сторона шапки в десктопной версии
+     */
+    .header_side_left {
+        width:         @header-width-left-side;
+        max-width:     ( @screen-size-desktop / 100 ) * @header-width-left-side;
+        margin-left:   auto;
+        padding-right: @header-space-inner;
+        .header__item {
+            padding-left:  15px;
+            padding-right: 40px;
+            max-width:     615px;
+        }
+    }
+
+    /**
+    Правая сторона шапки в десктопной версии
+     */
+    .header_side_right {
+        width:          @header-width-right-side;
+        max-width:      ( @screen-size-desktop / 100 ) * @header-width-right-side;
+        margin-right:   auto;
+        padding-left:   @header-space-inner;
         flex-direction: column;
         .header__item {
-            height:   50%;
-            position: relative;
+            padding-left:  30px;
+            padding-right: 15px;
+            height:        50%;
+            &:first-child {
+                padding-bottom: @header-space-inner;
+            }
+            + .header__item {
+                padding-top: @header-space-inner;
+            }
         }
     }
 }
