Update footer part

--- a/src/less/base.less
+++ b/src/less/base.less
@@ -14,7 +14,8 @@
     max-width:     @screen-size-desktop;
 }
 
-
-.footer {
-    padding-bottom: 115px;
+@media (min-width: @screen-size-tablet + 1) {
+    .footer {
+        padding-bottom: 116px;
+    }
 }
