--- a/src/less/box.less
+++ b/src/less/box.less
@@ -1,24 +1,55 @@
 .box {
     background-color: #f6f6f6;
-    padding:          45px 45px 45px 70px;
+    padding:          37px 45px 44px 71px;
     font-size:        @font-size-h2;
     font-weight:      300;
     box-shadow:       0 1px 3px fade(#363636, 15%);
     border-radius:    1px;
+    letter-spacing:   0.012em;
+    line-height:      1.5;
+    display:          flex;
 
     &__icon {
         width:             31px;
         height:            31px;
-        margin-right:      15px;
         display:           inline-block;
         background-size:   contain;
         background-repeat: no-repeat;
-        vertical-align:    bottom;
         opacity:           0.693;
+        margin:            auto 22px auto 0;
         &_type_game {
             background-image: data-uri('../icons/games32.png');
 
         }
     }
+    &__text {
+        margin-bottom: 3px;
+    }
 
+}
+
+@media (min-width: @screen-size-mobile + 1) and (max-width: @screen-size-tablet) {
+    .box {
+        padding-bottom: 60px;
+    }
+}
+
+@media (max-width: @screen-size-tablet) {
+    .box {
+        text-align:   center;
+        margin-left:  -15px;
+        margin-right: -15px;
+        padding-left: 45px;
+        text-shadow:  0 0 1px #aaa;
+        &__icon {
+            display: none;
+        }
+    }
+}
+
+@media (max-width: @screen-size-mobile) {
+    .box {
+        font-size: 1.5rem;
+        padding:   45px 15px 40px 15px;
+    }
 }
