--- a/src/less/slider.less
+++ b/src/less/slider.less
@@ -2,27 +2,51 @@
     .slider {
 
         &__item {
-            display: none;
-            padding: 0 78px;
+            position:         absolute;
+            left:             0;
+            height:           100%;
+            width:            100%;
+            padding:          0 78px;
+            box-sizing:       border-box;
+            opacity:          0;
+            transition:       opacity ease;
+            transition-delay: .3s;
             &_active {
-                display: flex;
+                opacity:             1;
+                transition-delay:    0s;
+                transition-duration: .3s;
+                z-index:             20;
             }
         }
+
         &__image-wrap {
             height: 100%;
             width:  100%;
             top:    0;
             left:   0;
         }
+
+        &__image {
+            transform:        scale(1.5);
+            transform-origin: 50.25% 46.5%;
+        }
     }
 }
 
 @media (max-width: @screen-size-mobile) {
     .slider {
-        height: 350px;
+        height:        348px;
+        margin-bottom: 7px;
 
         &__item {
+            padding-left:  15px;
+            padding-right: 15px;
+            text-align:    center;
+        }
 
+        &__image {
+            transform:        scale(2.6);
+            transform-origin: 50.25% 25.3%;
         }
     }
 }
