--- a/src/less/catalog.less
+++ b/src/less/catalog.less
@@ -15,7 +15,9 @@
 
 @media (max-width: @screen-size-tablet) {
     .catalog {
-        margin-left: -18px;
+        margin-left:    -18px;
+        padding-bottom: 37px;
+
         &__child {
             padding-left: 18px;
             width:        50%;
@@ -25,11 +27,13 @@
 }
 
 @media (min-width: @screen-size-mobile + 1) and (max-width: @screen-size-tablet) {
+    .catalog {
 
-    .catalog__child {
-        &_order-tablet {
-            &_first {
-                order: -1;
+        &__child {
+            &_order-tablet {
+                &_first {
+                    order: -1;
+                }
             }
         }
     }
@@ -37,8 +41,10 @@
 
 @media (max-width: @screen-size-mobile) {
     .catalog {
-        margin-left:  -15px;
-        margin-right: -15px;
+        margin-left:    -15px;
+        margin-right:   -15px;
+        padding-bottom: 0;
+
         .catalog__child {
             padding-left: 0;
             width:        100%;
