--- a/src/less/box.less
+++ b/src/less/box.less
@@ -17,30 +17,31 @@
         background-repeat: no-repeat;
         opacity:           0.693;
         margin:            auto 22px auto 0;
+
         &_type_game {
             background-image: data-uri('../icons/games32.png');
 
         }
     }
-    &__text {
-        margin-bottom: 3px;
-    }
 
 }
 
-@media (min-width: @screen-size-mobile + 1) and (max-width: @screen-size-tablet) {
+@media (min-width: @screen-size-mobile + 1) {
     .box {
-        padding-bottom: 60px;
+        &__text {
+            margin-bottom: 3px;
+        }
     }
 }
 
 @media (max-width: @screen-size-tablet) {
     .box {
-        text-align:   center;
-        margin-left:  -15px;
-        margin-right: -15px;
-        padding-left: 45px;
-        text-shadow:  0 0 1px #aaa;
+        margin-left:     -15px;
+        margin-right:    -15px;
+        padding:         42px 15px 52px;
+        text-align:      center;
+        justify-content: center;
+
         &__icon {
             display: none;
         }
@@ -49,7 +50,8 @@
 
 @media (max-width: @screen-size-mobile) {
     .box {
-        font-size: 1.5rem;
-        padding:   45px 15px 40px 15px;
+        font-size:   1.5rem;
+        padding:     37px 15px 40px 15px;
+        text-shadow: 0 0 1px #aaa;
     }
 }
