--- a/src/less/button.less
+++ b/src/less/button.less
@@ -2,7 +2,7 @@
     display:             inline-block;
     padding:             0 61px;
     line-height:         57px;
-    background-color:    @primary-background;
+    background-color:    @button-background;
     color:               white;
     text-decoration:     none;
     transition:          ease-out .3s;
@@ -10,10 +10,10 @@
     outline:             none;
     &:hover, &:focus {
         transition:       none;
-        background-color: lighten(@primary-background, 4%);
+        background-color: lighten(@button-background, 4%);
     }
     &:active {
-        background-color: darken(@primary-background, 3%);
+        background-color: darken(@button-background, 3%);
         color:            fade(white, 70%);
     }
 
@@ -23,10 +23,10 @@
 
         &:hover, &:focus {
             color:            white;
-            background-color: @primary-background;
+            background-color: @button-background;
         }
         &:active {
-            background-color: darken(@primary-background, 3%);
+            background-color: darken(@button-background, 3%);
             color:            fade(white, 70%);
         }
     }
