--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,5 +1,6 @@
 @global-color: #313131;
 @primary-background: #3a3f44;
+@button-background: #006f9e;
 
 @font-size-smaller: .75rem;
 @font-size-normal: .875rem;
