Update search module

--- a/src/less/search.less
+++ b/src/less/search.less
@@ -36,7 +36,17 @@
 
 @media (max-width: @screen-size-tablet) {
     .search__icon {
-        padding-left: 15px;
+        padding-left:  15px;
         padding-right: 15px;
+    }
+}
+
+@media (max-width: @screen-size-mobile) {
+    .search {
+        margin-bottom: 22px;
+
+        &__icon {
+            padding-right: 8px;
+        }
     }
 }
