--- a/src/less/template.less
+++ b/src/less/template.less
@@ -1,4 +1,4 @@
-@import (css) url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&amp;subset=cyrillic");
+@import (css) url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&subset=cyrillic");
 //@import '../../node_modules/npm-font-open-sans/open-sans';
 @import "../../node_modules/font-awesome/less/font-awesome";
 
