Fix ie font error

--- a/src/less/base.less
+++ b/src/less/base.less
@@ -1,7 +1,8 @@
 .page {
     margin:      0;
     color:       @global-color;
-    font:        @font-size-bigger 'Open Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+    font-size:   @font-size-bigger;
     line-height: 1.25;
     font-weight: normal;
 }
