Adjust slider styles

--- a/src/less/slider.less
+++ b/src/less/slider.less
@@ -33,6 +33,16 @@
     }
 }
 
+@media (max-width: 640px) {
+
+    .slider {
+        &__item {
+            padding-left:  40px;
+            padding-right: 40px;
+        }
+    }
+}
+
 @media (max-width: @screen-size-mobile) {
     .slider {
         height:        348px;
