Update box module

--- a/src/less/box.less
+++ b/src/less/box.less
@@ -42,7 +42,7 @@
         text-align:      center;
         justify-content: center;
 
-        &__icon {
+        &__icon_hidden-tablet {
             display: none;
         }
     }
