Fix some ie errors and bugs

--- a/src/less/button.less
+++ b/src/less/button.less
@@ -1,7 +1,7 @@
 .button {
     display:             inline-block;
-    padding:             0 61px;
-    line-height:         57px;
+    padding:             17px 61px 16px;
+    line-height:         1.5;
     background-color:    @button-background;
     color:               white;
     text-decoration:     none;
