--- a/src/less/catalog-item.less
+++ b/src/less/catalog-item.less
@@ -25,16 +25,18 @@
         width:            100%;
         padding:          0 15px;
         background-color: fade(black, 43%);
-        display:          flex;
         font-weight:      bold;
         font-size:        @catalog-caption-font-size;
         text-align:       center;
         cursor:           pointer;
         box-sizing:       border-box;
+        display:          flex;
+        justify-content:  center;
+        align-items:      center;
 
         &-text {
-            margin: auto;
-            color:  white;
+            width: 100%;
+            color: white;
         }
     }
 
