--- a/src/less/search.less
+++ b/src/less/search.less
@@ -6,6 +6,7 @@
     &__input {
         display:        block;
         width:          100%;
+        box-sizing:     border-box;
         border:         none;
         border-bottom:  1px solid fade(#454545, 18%);
         outline:        none;
