--- a/src/less/slider.less
+++ b/src/less/slider.less
@@ -3,6 +3,7 @@
 
         &__item {
             position:         absolute;
+            top:              0;
             left:             0;
             height:           100%;
             width:            100%;
